# tetris

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: console.rs  game_logic.rs  main.rs  tetromino_generators.rs
src/backend/: game.rs  mod.rs  rotation_systems.rs  tetromino_generators.rs
src/frontend/: console.rs
src/frontend/terminal/: mod.rs
tetrs_app_terminal/src/: game_screen_renderers.rs  main.rs  terminal_tetrs.rs
tetrs_engine/: Cargo.toml
tetrs_engine/src/: lib.rs  piece_generation.rs  piece_rotation.rs  rotation_systems.rs  tetromino_generators.rs
tetrs_lib/src/: lib.rs
tetrs_terminal/: Cargo.toml  tetrs_terminal.json
tetrs_terminal/src/: game_input_handler.rs  game_mods.rs  game_renderers.rs  game_screen_renderers.rs  main.rs  puzzle_mode.rs  terminal_app.rs  terminal_tetrs.rs
tetrs_terminal/src/game_mods/: cheese_mode.rs  combo_mode.rs  mod.rs  puzzle_mode.rs  util.rs
tetrs_terminal/src/game_renderers/: cached.rs  cached_renderer.rs  immediate.rs  mod.rs  naive.rs
tetrs_tui/: Cargo.toml
tetrs_tui/src/: main.rs  terminal_app.rs
tetrs_tui/src/game_mods/: cheese_mode.rs  combo_mode.rs  descent_mode.rs  mod.rs  puzzle_mode.rs  utils.rs
tetrs_tui/src/game_renderers/: debug_renderer.rs  mod.rs
